--- a/style.css
+++ b/style.css
@@ -2,13 +2,11 @@
   --white: white;
   --blue: rgb(#031d33);
 }
-
 * {
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
 }
-
 header nav {
   height: 70px;
 }
@@ -59,7 +57,6 @@ header nav ul .dropdown:hover .dropdown-content {
 header nav ul .dropdown:hover .dropbtn {
   background-color: var(--blue);
 }
-
 main .hero_section_1 {
   background-image: url(./img/bgQUBbZ14hfeb975yZ2YzTnAwen.jpg);
   width: auto;
@@ -85,7 +82,6 @@ main .hero_section_1 .Search_input_button #input_1 {
 }
 main .hero_section_1 .Search_input_button #input_1:focus-visible {
   outline: none;
-  border: none;
 }
 main .hero_section_1 .Search_input_button .hero_section_1_button {
   width: 120px;
@@ -101,7 +97,6 @@ main .hero_section_1 .Search_input_button .hero_section_1_button {
 main .hero_section_1 .Search_input_button .hero_section_1_button:hover {
   color: black;
 }
-
 section {
   background-image: url(./img/rGbRnRvkmrSub07ty89Vnlsh6UX.jpg);
   -o-object-fit: cover;
@@ -129,13 +124,24 @@ section .hero_section_2_button {
 section .hero_section_2_button:hover {
   border: 2px solid var(--white);
 }
-
 .movei_section {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 200px;
   background-image: url(./img/svg/trending-bg-39afc2a5f77e31d469b25c187814c0a2efef225494c038098d62317d923f8415.svg);
   width: 100%;
-  height: 500px;
+  height: 400px;
   overflow-x: scroll;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+}
+.movei_section .movei_teriding_button_top {
+  margin-top: 10px;
+  display: flex;
+  margin-left: 25px;
+  width: 180px;
+  height: 30px;
+  gap: 10px;
+  border: 1px solid;
 }
