--- a/style.scss
+++ b/style.scss
@@ -92,7 +92,6 @@ main {
         text-align: start;
         &:focus-visible{
           outline: none;
-          border: none;
         }
       }
       .hero_section_1_button {
@@ -149,7 +148,20 @@ section{
   background-position: 50% 200px;
   background-image: url(./img/svg/trending-bg-39afc2a5f77e31d469b25c187814c0a2efef225494c038098d62317d923f8415.svg);
   width: 100%;
-  height: 500px;
+  height: 400px;
   overflow-x: scroll;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+
+  .movei_teriding_button_top{
+    margin-top: 10px;
+    display: flex;
+    margin-left: 25px;
+    width: 100;
+    height: 30px;
+    gap: 5px;
+    border: 1px solid rgb(#031d33);
+  }
 }
 //movei_section
