--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
-:root {
-  --white: white;
-  --blue: rgb(#031d33);
-}
+@import url(./sass/root.css);
 * {
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
 }
+* a {
+  text-decoration: none;
+  list-style: none;
+}
+
 header nav {
   height: 70px;
 }
@@ -57,6 +59,7 @@ header nav ul .dropdown:hover .dropdown-content {
 header nav ul .dropdown:hover .dropbtn {
   background-color: var(--blue);
 }
+
 main .hero_section_1 {
   background-image: url(./img/bgQUBbZ14hfeb975yZ2YzTnAwen.jpg);
   width: auto;
@@ -97,6 +100,7 @@ main .hero_section_1 .Search_input_button .hero_section_1_button {
 main .hero_section_1 .Search_input_button .hero_section_1_button:hover {
   color: black;
 }
+
 section {
   background-image: url(./img/rGbRnRvkmrSub07ty89Vnlsh6UX.jpg);
   -o-object-fit: cover;
@@ -124,6 +128,7 @@ section .hero_section_2_button {
 section .hero_section_2_button:hover {
   border: 2px solid var(--white);
 }
+
 .movei_section {
   background-repeat: no-repeat;
   background-size: cover;
@@ -140,8 +145,42 @@ section .hero_section_2_button:hover {
   margin-top: 10px;
   display: flex;
   margin-left: 25px;
-  width: 180px;
+  width: 100;
   height: 30px;
-  gap: 10px;
-  border: 1px solid;
+  padding-right: 5px;
+  gap: 5px;
+  border: 1px solid black;
+  border-radius: 50px;
+}
+.movei_section .movei_teriding_button_top .Today {
+  padding-left: 5px;
+  padding-right: 5px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 50px;
+  color: var(--white);
+  background-color: #031d33;
+}
+.movei_section .movei_teriding_button_top .Today:hover {
+  cursor: pointer;
+}
+.movei_section .movei_teriding_button_top .Today a {
+  color: #2bd8ac;
+  font-size: 18px;
+}
+.movei_section .movei_teriding_button_top .This_Week {
+  padding-top: 2px;
+}
+.movei_section .movei_teriding_button_top .This_Week a {
+  color: black;
+}
+.movei_section .movei_teriding_button_top .This_Week:hover {
+  cursor: pointer;
+}
+
+.Latest_Trailers {
+  width: 100%;
+  height: 350px;
+  overflow-x: scroll;
 }
