--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,15 @@
   }
 }
 
+body {
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: gainsboro;
+    border-radius: 50px;
+    height: 10px;
+  }
+}
+
 //header
 
 header {
@@ -146,16 +155,25 @@ section {
 //movei_section
 .movei_section {
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: 50% 200px;
   background-image: url(./img/svg/trending-bg-39afc2a5f77e31d469b25c187814c0a2efef225494c038098d62317d923f8415.svg);
   width: 100%;
-  height: 400px;
-  overflow-x: scroll;
+  height: 550px;
+  padding-top: 30px;
+  padding-right: 30px;
+  overflow-x: auto;
   padding-top: 30px;
   padding-bottom: 30px;
   padding-left: 30px;
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: grey;
+    border-radius: 50px;
+    height: 10px;
+  }
   .movei_teriding_button_top {
+    left: 0px;
+    position: sticky;
     margin-top: 10px;
     display: flex;
     margin-left: 25px;
@@ -166,8 +184,8 @@ section {
     border: 1px solid black;
     border-radius: 50px;
     .Today {
-      padding-left: 5px;
-      padding-right: 5px;
+      padding-left: 15px;
+      padding-right: 15px;
       width: fit-content;
       border-radius: 50px;
       color: var(--white);
@@ -190,13 +208,214 @@ section {
       }
     }
   }
+  .cards {
+    margin-top: 20px;
+    width: 10%;
+    display: flex;
+    gap: 180%;
+    height: 180px;
+    border-radius: 15px;
+    .card {
+      border: none;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    .card_img {
+      img {
+        border-radius: 15px;
+        height: 300px;
+      }
+    }
+    .movie_title {
+      h4 {
+        font-size: 20px;
+        width: 200px;
+      }
+    }
+    .movie_data {
+      h5 {
+        color: gray;
+        width: 200px;
+      }
+    }
+    i {
+      width: fit-content;
+      padding: 5px;
+      border-radius: 50px;
+      background-color: gray;
+      transform: translate(170px, -290px);
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
 //movei_section
+
 //Latest Trailers
-.Latest_Trailers{
+.latest_trailers {
+  padding: 40px 25px;
   width: 100%;
-  height: 350px;
-  overflow-x: scroll;
-  
+  height: 400px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  background-position: center center;
+  color: white;
+  background-image: url(./img/lastest_img/uDgy6hyPd82kOHh6I95FLtLnj6p.jpg);
+  .logo{
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    height: 100px;
+    .on_tv_button{
+      width: fit-content;
+      border: 1px solid #2dd8ac;
+      border-radius: 50px;
+      padding-right: 5px;
+      height: 30px;
+      .on_tv{
+        padding: 0px 10px;
+        border-radius: 50px;
+        width: fit-content;
+        &:hover{
+          cursor: pointer;
+        }
+        background: linear-gradient(to right,#bbfdce,#2dd8ac);
+      }
+      .in_theaters{
+        margin-top: -1px;
+        margin-right: 10px;
+        &:hover{
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .latest_movie{
+    margin-top: -30px;
+    .movie_1{
+      &:hover{
+        transition: 0.2s;
+        transform: scale(1.02);
+        cursor: pointer;
+      }
+    }
+    .movie_2{
+      &:hover{
+        transition: 0.2s;
+        transform: scale(1.02);
+        cursor: pointer;
+      }
+    }
+  }
 }
 //Latest Trailers
+
+//popular_cards
+.popular_cards{
+  width: 100%;
+  height: 550px;
+  overflow-x: scroll;
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: grey;
+    border-radius: 50px;
+    height: 10px;
+  }
+  .popular_text{
+    margin-top: 30px;
+  }
+  .popular_button_top{
+    margin-top: 10px;
+    width: fit-content;
+    height: 30px;
+    padding: 1px 0px;
+    gap: 15px;
+    border: 1px solid black;
+    border-radius: 50px;
+    .popular_on_tv {
+      padding-left: 15px;
+      margin-top: -2px;
+      padding-right: 15px;
+      height: 30px;
+      width: fit-content;
+      border-radius: 50px;
+      color: var(--white);
+      background-color: #031d33;
+      text-align: center;
+      align-items: center;
+      &:hover {
+        cursor: pointer;
+      }
+      a {
+        color: #2bd8ac;
+        font-size: 18px;
+      }
+    }
+    .popular_in {
+      padding-right: 5px;
+      a {
+        color: black;
+      }
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+    .card {
+      border: none;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    .card_img {
+      img {
+        border-radius: 15px;
+        height: 300px;
+      }
+    }
+    .movie_title {
+      h4 {
+        font-size: 20px;
+        width: 200px;
+      }
+    }
+    .movie_data {
+      h5 {
+        color: gray;
+        width: 200px;
+      }
+    }
+    i {
+      width: fit-content;
+      padding: 5px;
+      border-radius: 50px;
+      background-color: gray;
+      transform: translate(170px, -290px);
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+//popular_cards
+//Leaderboard
+.Leaderboard{
+  padding: 20px;
+  width: 100%;
+  height: 400px;
+  .prosent{
+    width: 100%;
+    height: 130%;
+    .prosent_1{
+      width: 50%;
+      height: 80%;
+    }
+    .prosent_2{
+      width: 50%;
+      height: 80%;
+    }
+  }
+}
+//Leaderboard
