--- a/style.scss
+++ b/style.scss
@@ -264,46 +264,46 @@ section {
   background-position: center center;
   color: white;
   background-image: url(./img/lastest_img/uDgy6hyPd82kOHh6I95FLtLnj6p.jpg);
-  .logo{
+  .logo {
     width: 100%;
     display: flex;
     align-items: flex-start;
     height: 100px;
-    .on_tv_button{
+    .on_tv_button {
       width: fit-content;
       border: 1px solid #2dd8ac;
       border-radius: 50px;
       padding-right: 5px;
       height: 30px;
-      .on_tv{
+      .on_tv {
         padding: 0px 10px;
         border-radius: 50px;
         width: fit-content;
-        &:hover{
+        &:hover {
           cursor: pointer;
         }
-        background: linear-gradient(to right,#bbfdce,#2dd8ac);
+        background: linear-gradient(to right, #bbfdce, #2dd8ac);
       }
-      .in_theaters{
+      .in_theaters {
         margin-top: -1px;
         margin-right: 10px;
-        &:hover{
+        &:hover {
           cursor: pointer;
         }
       }
     }
   }
-  .latest_movie{
+  .latest_movie {
     margin-top: -30px;
-    .movie_1{
-      &:hover{
+    .movie_1 {
+      &:hover {
         transition: 0.2s;
         transform: scale(1.02);
         cursor: pointer;
       }
     }
-    .movie_2{
-      &:hover{
+    .movie_2 {
+      &:hover {
         transition: 0.2s;
         transform: scale(1.02);
         cursor: pointer;
@@ -314,7 +314,7 @@ section {
 //Latest Trailers
 
 //popular_cards
-.popular_cards{
+.popular_cards {
   width: 100%;
   height: 550px;
   overflow-x: scroll;
@@ -324,10 +324,10 @@ section {
     border-radius: 50px;
     height: 10px;
   }
-  .popular_text{
+  .popular_text {
     margin-top: 30px;
   }
-  .popular_button_top{
+  .popular_button_top {
     margin-top: 10px;
     width: fit-content;
     height: 30px;
@@ -364,58 +364,224 @@ section {
       }
     }
   }
-    .card {
-      border: none;
-      &:hover {
-        cursor: pointer;
-      }
-    }
-    .card_img {
-      img {
-        border-radius: 15px;
-        height: 300px;
-      }
-    }
-    .movie_title {
-      h4 {
-        font-size: 20px;
-        width: 200px;
-      }
-    }
-    .movie_data {
-      h5 {
-        color: gray;
-        width: 200px;
-      }
-    }
-    i {
-      width: fit-content;
-      padding: 5px;
-      border-radius: 50px;
-      background-color: gray;
-      transform: translate(170px, -290px);
-      &:hover {
-        cursor: pointer;
-      }
+  .card {
+    border: none;
+    &:hover {
+      cursor: pointer;
     }
   }
+  .card_img {
+    img {
+      border-radius: 15px;
+      height: 300px;
+    }
+  }
+  .movie_title {
+    h4 {
+      font-size: 20px;
+      width: 200px;
+    }
+  }
+  .movie_data {
+    h5 {
+      color: gray;
+      width: 200px;
+    }
+  }
+  i {
+    width: fit-content;
+    padding: 5px;
+    border-radius: 50px;
+    background-color: gray;
+    transform: translate(170px, -290px);
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
 //popular_cards
 //Leaderboard
-.Leaderboard{
+.Leaderboard {
   padding: 20px;
   width: 100%;
   height: 400px;
-  .prosent{
+  .prosent {
     width: 100%;
     height: 130%;
-    .prosent_1{
+    .prosent_1 {
       width: 50%;
       height: 80%;
+      .green_prosent_1 {
+        width: 50px;
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_1 {
+        width: 400px;
+        height: 8px;
+        border-radius: 50px;
+        background: linear-gradient(to right, #fdc070, #d93d63);
+      }
+      .green_prosent_2 {
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        width: 120px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_2 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 250px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .green_prosent_3 {
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        width: 150px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_3 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 100px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .green_prosent_4 {
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        width: 40px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_4 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 85px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .green_prosent_5 {
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        width: 180px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_5 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 70px;
+        height: 8px;
+        border-radius: 50px;
+      }
     }
-    .prosent_2{
+    .prosent_2 {
       width: 50%;
       height: 80%;
+      .green_prosent_6 {
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        width: 380px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_6 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 500px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .green_prosent_7 {
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        width: 80px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_7 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 200px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .green_prosent_8 {
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        width: 50px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_8 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 180px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .green_prosent_9 {
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        width: 520px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_9 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 150px;
+        height: 8px;
+        border-radius: 50px;
+      }
+      .green_prosent_10 {
+        width: 50px;
+        background: linear-gradient(to right, #b7fbcd, #23d6aa);
+        height: 8px;
+        border-radius: 50px;
+      }
+      .red_prosent_10 {
+        background: linear-gradient(to right, #fdc070, #d93d63);
+        width: 130px;
+        height: 8px;
+        border-radius: 50px;
+      }
     }
   }
 }
 //Leaderboard
+//footer
+footer {
+  margin-top: 200px;
+  width: 100%;
+  height: 300px;
+  background-color: #031f37;
+  padding: 50px;
+  .footer_button {
+    margin-left: -140px;
+    color: #01b4e4;
+    width: 200px;
+    height: 100%;
+    background-color: white;
+    &:hover {
+      background-color: white;
+      color: #01b4e4;
+    }
+  }
+  .footer_link {
+    gap: 50px;
+    color: white;
+    margin-left: 50px;
+    margin-top: 40px;
+    .footer_link_1 {
+      a {
+        color: white;
+      }
+    }
+    .footer_link_2 {
+      a {
+        color: white;
+      }
+    }
+    .footer_link_3 {
+      a {
+        color: white;
+      }
+    }
+    .footer_link_4 {
+      a {
+        color: white;
+      }
+    }
+  }
+}
+//footer
