--- a/style.css
+++ b/style.css
@@ -9,11 +9,27 @@
   list-style: none;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
-  background-color: gainsboro;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+::-webkit-scrollbar-thumb {
   border-radius: 50px;
-  height: 10px;
 }
 
 header nav {
@@ -45,7 +61,7 @@ header nav ul .dropdown-content {
 }
 header nav ul .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 5px;
   text-decoration: none;
   display: block;
   border-radius: 5px;
@@ -148,12 +164,24 @@ section .hero_section_2_button:hover {
   padding-top: 30px;
   padding-bottom: 30px;
   padding-left: 30px;
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
 }
-.movei_section::-webkit-scrollbar {
+.movei_section ::-webkit-scrollbar {
   width: 10px;
-  background-color: grey;
+}
+.movei_section ::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.movei_section ::-webkit-scrollbar-thumb {
+  background: #888;
+}
+.movei_section ::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.movei_section ::-webkit-scrollbar-thumb {
   border-radius: 50px;
-  height: 10px;
 }
 .movei_section .movei_teriding_button_top {
   left: 0px;
@@ -164,10 +192,10 @@ section .hero_section_2_button:hover {
   margin-left: 25px;
   width: 100;
   height: 30px;
-  padding-right: 5px;
   gap: 5px;
   border: 1px solid black;
   border-radius: 50px;
+  transition: 1s;
 }
 .movei_section .movei_teriding_button_top .Today {
   padding-left: 15px;
@@ -187,7 +215,12 @@ section .hero_section_2_button:hover {
   font-size: 18px;
 }
 .movei_section .movei_teriding_button_top .This_Week {
+  width: 102px;
   padding-top: 2px;
+  border-radius: 50px;
+  color: white;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 .movei_section .movei_teriding_button_top .This_Week a {
   color: black;
@@ -282,12 +315,12 @@ section .hero_section_2_button:hover {
 .latest_trailers .latest_movie {
   margin-top: -30px;
 }
-.latest_trailers .latest_movie .movie_1:hover {
+.latest_trailers .latest_movie .movie_1 img:hover {
   transition: 0.2s;
   transform: scale(1.02);
   cursor: pointer;
 }
-.latest_trailers .latest_movie .movie_2:hover {
+.latest_trailers .latest_movie .movie_2 img:hover {
   transition: 0.2s;
   transform: scale(1.02);
   cursor: pointer;
@@ -297,12 +330,24 @@ section .hero_section_2_button:hover {
   width: 100%;
   height: 550px;
   overflow-x: scroll;
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
 }
-.popular_cards::-webkit-scrollbar {
+.popular_cards ::-webkit-scrollbar {
   width: 10px;
-  background-color: grey;
+}
+.popular_cards ::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.popular_cards ::-webkit-scrollbar-thumb {
+  background: #888;
+}
+.popular_cards ::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.popular_cards ::-webkit-scrollbar-thumb {
   border-radius: 50px;
-  height: 10px;
 }
 .popular_cards .popular_text {
   margin-top: 30px;
@@ -525,6 +570,7 @@ footer {
   padding: 50px;
 }
 footer .footer_button {
+  padding-top: 13px;
   margin-left: -140px;
   color: #01b4e4;
   width: 200px;
