--- a/style.scss
+++ b/style.scss
@@ -7,15 +7,29 @@
     text-decoration: none;
     list-style: none;
   }
+  
 }
 
-body {
-  &::-webkit-scrollbar {
-    width: 10px;
-    background-color: gainsboro;
-    border-radius: 50px;
-    height: 10px;
-  }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 50px;
 }
 
 //header
@@ -50,7 +64,7 @@ header {
       }
       .dropdown-content a {
         color: black;
-        padding: 12px 16px;
+        padding: 5px;
         text-decoration: none;
         display: block;
         border-radius: 5px;
@@ -165,11 +179,26 @@ section {
   padding-top: 30px;
   padding-bottom: 30px;
   padding-left: 30px;
-  &::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 10px;
-    background-color: grey;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+  ::-webkit-scrollbar-thumb{
     border-radius: 50px;
-    height: 10px;
   }
   .movei_teriding_button_top {
     left: 0px;
@@ -179,10 +208,10 @@ section {
     margin-left: 25px;
     width: 100;
     height: 30px;
-    padding-right: 5px;
     gap: 5px;
     border: 1px solid black;
     border-radius: 50px;
+    transition: 1s;
     .Today {
       padding-left: 15px;
       padding-right: 15px;
@@ -199,7 +228,12 @@ section {
       }
     }
     .This_Week {
+      width: 102px;
       padding-top: 2px;
+      border-radius: 50px;
+      color: white;
+      padding-right: 15px;
+      padding-left: 15px;
       a {
         color: black;
       }
@@ -296,17 +330,21 @@ section {
   .latest_movie {
     margin-top: -30px;
     .movie_1 {
-      &:hover {
-        transition: 0.2s;
-        transform: scale(1.02);
-        cursor: pointer;
+      img{
+        &:hover {
+          transition: 0.2s;
+          transform: scale(1.02);
+          cursor: pointer;
+        }
       }
     }
     .movie_2 {
-      &:hover {
-        transition: 0.2s;
-        transform: scale(1.02);
-        cursor: pointer;
+      img{
+        &:hover {
+          transition: 0.2s;
+          transform: scale(1.02);
+          cursor: pointer;
+        }
       }
     }
   }
@@ -318,11 +356,26 @@ section {
   width: 100%;
   height: 550px;
   overflow-x: scroll;
-  &::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 10px;
-    background-color: grey;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+  ::-webkit-scrollbar-thumb{
     border-radius: 50px;
-    height: 10px;
   }
   .popular_text {
     margin-top: 30px;
@@ -547,6 +600,7 @@ footer {
   background-color: #031f37;
   padding: 50px;
   .footer_button {
+    padding-top: 13px;
     margin-left: -140px;
     color: #01b4e4;
     width: 200px;
