--- a/sass/movie_sass/movie.scss
+++ b/sass/movie_sass/movie.scss
@@ -89,67 +89,177 @@
       }
     }
   }
-  //header
-  //header_section
-  .header_section{
-    width: 100%;
-    background-color: white;
-    height: 50px;
-    .dropbtn {
-      background-color: #04aa6d;
-      color: white;
-      padding: 16px;
-      font-size: 16px;
-      border: none;
-    }
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f1f1f1;
-      min-width: 160px;
-      margin-top: -5px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-      border-radius: 5px;
-    }
-    .dropdown-content a {
-      color: black;
-      padding: 5px;
-      text-decoration: none;
-      display: block;
-      border-radius: 5px;
-    }
-    .dropbtn {
-      background-color: var(--blue);
-      color: black;
-      padding: 16px;
-      font-size: 16px;
-      border: none;
-    }
-    .dropdown-content a:hover {
-      background-color: #ddd;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
-    .dropdown:hover .dropbtn {
-      background-color: var(--blue);
-    }
-  }  
-  //header_section  
+  //header 
   //main
   main{
     width: 100%;
     height: 500px;
-    background-color: black;
+    padding: 40px;
+    .popular_left_button{
+          #h4_item{
+      margin-top: 25px;
+      margin-bottom: 20px;
+  }
+  #button_on{
+      background-color: #fff;
+      color: black;
+      border-radius: 8px;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 12px;
+      padding-bottom: 12px;
+      width:240px ;
+      font-weight: 600;
+      text-align: start;
+      font-size: 1.1em;
+      box-shadow: 3px 3px 4px 4px #d0c8c8;
+      
+  }
+  #on_button{
+      background-color: #fff;
+      color: black;
+      border-radius: 8px;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 12px;
+      padding-bottom: 12px;
+      width:240px ;
+      font-weight: 600;
+      text-align: start;
+      font-size: 1.1em;
+      box-shadow: 3px 3px 4px 4px #d0c8c8;
+      margin-top: 20px;
+  }
+  #p_button{
+      margin-left: 10px;
+      margin-bottom: 0px;
+      color: gray;
+      font-weight: 100;
+      font-size: 15px;
+  }
+  #radio_inp{
+      margin-left: 15px;
+      display: inline-block;
+  
+  }
+  #second_p{
+      display: inline-block;
+      margin-bottom: 0px;
+  
+  }
+  #third_p{
+      display: inline-block;
+      margin-bottom: 0px;
+      
+  }
+  #radio_input{
+      margin-left: 15px;
+      display: inline-block;
+  }
+  .dropdown-menu{
+      width: 255px;
+  }
+  #radio_inpot{
+      margin-left: 15px;
+      display: inline-block;
+  
+  }
+  #fourth_p{
+      display: inline-block;
+      margin-bottom: 0px;
+  }
+  .search_p{
+      display: inline-block;
+  }
+  #prosmotr_p{
+      margin-left: 10px;
+      margin-bottom: 0px;
+      color: gray;
+      font-weight: 100;
+      font-size: 15px;
+  }
+  .checkbox{
+      margin-left: 25px;
+  
+  }
+  .date_p{
+      margin-left: 10px;
+      margin-bottom: 0px;
+      color: gray;
+      font-weight: 100;
+      font-size: 15px;
+  }
+  #to{
+      margin-left: 10px;
+      margin-bottom: 0px;
+      color: gray;
+      font-weight: 100;
+      font-size: 15px;
+      display: inline-block;
+      margin-right: 70px;
+  }
+  #date_inp{
+      border: 1px solid rgb(174, 168, 168);
+      border-radius: 4px;
+      padding-top: 6px;
+      padding-bottom: 6px;
+      padding-right: 4px;
+      padding-left: 4px;
+      margin-bottom: 10px;
+  }
+  
+  #do{
+      margin-left: 10px;
+      margin-bottom: 0px;
+      color: gray;
+      font-weight: 100;
+      font-size: 15px;
+      display: inline-block;
+      margin-right: 70px;
+  }
+  #date_input{
+      border: 1px solid rgb(174, 168, 168);
+      border-radius: 4px;
+      padding-top: 6px;
+      padding-bottom: 6px;
+      padding-right: 4px;
+      padding-left: 4px;
+  }
+  #button_on{
+      margin-top: 20px;
+  }
+  #search_p{
+      margin-bottom: 0px;
+      color: gray;
+  }
+  #servise_p{
+      margin-left: 20px;
+      color: gray;
+  }
+  #checkbox{
+      margin-left: 15px;
+  }
+  #cards__wrapper{
+      display: grid;
+          width: auto;
+          height: auto;
+          position: relative;
+          bottom: 115px;
+          margin-left: 19vw;
+          bottom: 170px;
+          gap: 30px 30px;
+          grid-template-columns: 200px 200px 200px 200px;
+      }
+      .dropt__button{
+         width:17vw;
+         height:55px;
+         padding: 10px;
+         background-color: white;
+         border: none;
+         border-radius: 10px;
+         box-shadow: 0 4px 8px 0 rgba(147, 147, 147, 0.2), 0 6px 20px 0 rgba(147, 147, 147, 0.19);
+      }
+    }
+
   }
   //main
-  //person_box
-  
-  //person_box
