--- a/style.scss
+++ b/style.scss
@@ -245,6 +245,25 @@ section {
     gap: 180%;
     height: 180px;
     border-radius: 15px;
+    .prosent{
+      margin-top: -45px;
+      padding: 8px;
+      padding-left: 15px;
+      width: 50px;
+      height: 500px;
+      border-radius: 50px;
+      color: white;
+      background-color: #081c22;
+      .pro_number{
+        transform: translate(-8px);
+        text-align: center;
+        padding-top: 3px;
+        width: 35px;
+        height: 35px;
+        border-radius: 50px;
+        border: 2px solid aqua;
+      }
+    }
     .card {
       border: none;
       &:hover {
@@ -277,6 +296,8 @@ section {
       transform: translate(170px, -290px);
       &:hover {
         cursor: pointer;
+        background-color: aqua;
+        color: white;
       }
     }
   }
@@ -372,46 +393,6 @@ section {
   }
   ::-webkit-scrollbar-thumb{
     border-radius: 50px;
-  }
-  .popular_text {
-    margin-top: 30px;
-  }
-  .popular_button_top {
-    margin-top: 10px;
-    width: fit-content;
-    height: 30px;
-    padding: 1px 0px;
-    gap: 15px;
-    border: 1px solid black;
-    border-radius: 50px;
-    .popular_on_tv {
-      padding-left: 15px;
-      margin-top: -2px;
-      padding-right: 15px;
-      height: 30px;
-      width: fit-content;
-      border-radius: 50px;
-      color: var(--white);
-      background-color: #031d33;
-      text-align: center;
-      align-items: center;
-      &:hover {
-        cursor: pointer;
-      }
-      a {
-        color: #2bd8ac;
-        font-size: 18px;
-      }
-    }
-    .popular_in {
-      padding-right: 5px;
-      a {
-        color: black;
-      }
-      &:hover {
-        cursor: pointer;
-      }
-    }
   }
   .card {
     border: none;
